k8s/05-opa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  namespace: veritas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:latest-static
          args:
            - "run"
            - "--server"
            - "--log-level=info"
            - "--addr=0.0.0.0:8181"
            - "/policies"
          ports:
            - containerPort: 8181
          volumeMounts:
            - name: policy
              mountPath: /policies
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8181
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: policy
          configMap:
            name: opa-policy
---
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: veritas
spec:
  selector:
    app: opa
  ports:
    - name: http
      port: 8181
      targetPort: 8181
